; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_loadfile.c_mp_switch_track.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_loadfile.c_mp_switch_track.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }
%struct.track = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_switch_track(%struct.MPContext* %0, i32 %1, %struct.track* %2, i32 %3) #0 {
  %5 = alloca %struct.MPContext*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.track*, align 8
  %8 = alloca i32, align 4
  store %struct.MPContext* %0, %struct.MPContext** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.track* %2, %struct.track** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.MPContext*, %struct.MPContext** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.track*, %struct.track** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @mp_switch_track_n(%struct.MPContext* %9, i32 0, i32 %10, %struct.track* %11, i32 %12)
  ret void
}

declare dso_local i32 @mp_switch_track_n(%struct.MPContext*, i32, i32, %struct.track*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
